# way

./: .gitignore  README.md  pyproject.toml
data/: housing_synth.csv  titanic_synth.csv
notebooks/: 01_00_main.ipynb  01_00_main_REBUILT.ipynb  01_01_demo_housing_regression.ipynb  01_02_demo_titanic_classification.ipynb  01_03_exercise_regression.ipynb  02_00_main.ipynb  02_01_exercise_guided.ipynb  02_02_exercise_a_housing.ipynb  02_02_exercise_open.ipynb  02_02a_exercise_a_housing_explanations.ipynb  02_03_exercise_b_auto.ipynb  02_03_extension.ipynb  02_03a_exercise_b_auto_explanations.ipynb  03_00_main.ipynb  03_01_exercise_guided.ipynb  03_02_exercise_heartdisease.ipynb  03_02_exercise_open.ipynb  03_02a_exercise_heartdisease.ipynb  04_00_main.ipynb  04_01_demo_unsupervised.ipynb  04_01_exercise_guided.ipynb  04_02_exercise_open.ipynb  05_00_main.ipynb  05_01_exercise_guided.ipynb  05_03_extension_linguistic.ipynb  06_00_main.ipynb  06_00_main_tfds.ipynb  06_00_main_v3.ipynb  smoke_test.py
src/core/generators/: 02_99_datasets_synth.py  04_99_datasets_synth.py
src/gateway/generators/: 03_99_datasets_synth.py  Module3Builder.ipynb  transaction_risk_dgp.py
